--- a/style/main.scss
+++ b/style/main.scss
@@ -87,10 +87,10 @@
                 font-weight: 700;
                 font-size: 35px;
             }
-            .btn-light{
-                background-color: var(--main-bg-color);
-                color: #fff;
-            }
+            // .btn-light{
+            //     background-color: var(--main-bg-color);
+            //     color: #fff;
+            // }
         }
         @media screen and (max-width: 992px) {
             .row{
